Finish layout and routes

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,10 @@
-<% provide(:title, "About") %>
-<h1>About</h1>
+<% provide :title, t(".title") %>
+<h1><%= t ".title" %></h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  The <a href="http://www.railstutorial.org/"><em><%= t "static_pages.ruby"%></em></a><%= t ".about1"%>
+  <a href="http://www.railstutorial.org/book"><%= t ".about2" %></a><%= t ".about3" %>
+  <a href="http://screencasts.railstutorial.org/"><%= t ".about4" %></a>
+  <%= t ".about5" %>
+  <a href="http://rubyonrails.org/"><%= t ".about6" %></a>.
+  <%= t ".about7" %>
 </p>
