--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,13 @@
-<% provide(:title, "Home") %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="center jumbotron">
+  <h1><%= t ".hello"%></h1>
+
+  <h2>
+    <%= t ".home1" %>
+    <a href="http://www.railstutorial.org/"><%= t "static_pages.ruby"%></a>
+    <%= t ".home2" %>
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: t(".home3")), "http://rubyonrails.org/" %>
